GuardrAil: AI 코드 개선 반영 (분석 ID: 903)